# tom

./: pyproject.toml  setup.py
structures/: ps.txt
tom/: buildkit.py  licenses.py  tom.py
