[tool.poetry]
name = "tom"
version = "0.1.4"
description = "A CLI Project Builder which makes your projects well-organized and clean"
authors = ["Arghya Sarkar <arghyasarkar.joker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
